Added Prime 2 and XX Songs list

--- a/song_randomizer.html
+++ b/song_randomizer.html
@@ -203,7 +203,228 @@
             'Pavane'
           ],
           'FIESTA 2': ['Monolith','Y2Z','Rockhill','Switchback','Ladybug','Hardkore of the North','Rippin It Up','Tribe Attacker','Virtual Emotion','Take Me Back','RE-RAVE','Heel and Toe','Dream To Nightmare','Rainspark','Utopia','Xuxa','Be Alive (Raaban Inc. Mix)','VVV','Star Command','Pop The Track','Electric','Passacaglia','Baroque Virus','Elise','Ignis Fatuus(DM Ashura Mix)','Love Is A Danger Zone (Cranky Mix)','Hypnosis(SynthWulf Mix)','FFF','Unique','Accident','D','U Got Me Rocking'],
-          'PRIME': ['Nemesis','Katkoi','Latino Virus','Elysium','Yog-Sothoth','Silhouette_Effect','Chinese restaurant','Avalanche','Force of Ra','Requiem','You Got Me Crazy','B2','Meteorize','Mad5cience','Hestia','Amphitryon','Leakage Voltage','Removable Disk0','Super Fantasy','Violet Perfume','Red Swan','Hyacinth','Blaze emotion(Band version)','1950','Sugar Conspiracy Theory','Allegro Piu Mosso','Annihilator Method','Move That Body!','Rock the house','Scorpion King','Point Zero One','red snow']
+          'PRIME': ['Nemesis','Katkoi','Latino Virus','Elysium','Yog-Sothoth','Silhouette_Effect','Chinese restaurant','Avalanche','Force of Ra','Requiem','You Got Me Crazy','B2','Meteorize','Mad5cience','Hestia','Amphitryon','Leakage Voltage','Removable Disk0','Super Fantasy','Violet Perfume','Red Swan','Hyacinth','Blaze emotion(Band version)','1950','Sugar Conspiracy Theory','Allegro Piu Mosso','Annihilator Method','Move That Body!','Rock the house','Scorpion King','Point Zero One','red snow'],
+          'PRIME 2': [
+            'Last Rebirth',
+            'Super Capriccio',
+            'Hellfire',
+            'Tritium',
+            'Cross Over',
+            'God Mode feat. Skizzo',
+            'Shub Niggurath',
+            'Further',
+            'The Quick Brown Fox Jumps Over The Lazy Dog',
+            'Silver Beat feat. Chisa Uezono',
+            'Bring Back the Beat',
+            'Break Out',
+            'Sarabande',
+            'Kasou Shinja',
+            'Overblow 2',
+            'Passing Rider',
+            'Arcana Force',
+            'Allegro Furioso',
+            'Anguished Unmaking',
+            'Utsushiyo no Kaze feat. Kana',
+            'Hey U',
+            'Twist of Fate (feat. Ruriling)',
+            'HTTP',
+            'Up & Up (Produced by AWAL)',
+            'Travel to Future',
+            'Rave til the Earths End',
+            'Awakening',
+            'Escape',
+            'Waltz of Doge',
+            'Bang Bang Bang',
+            'Me Gustas Tu',
+            'Rhythm Ta',
+            'Chase Me',
+            'Pick Me',
+            'Jackpot',
+            'Gotta Be You',
+            'Boombayah',
+            'Sober',
+            'Up & Down',
+            'Good Night',
+            'Youre the Best',
+            'Number Nine',
+            'Acquaintance',
+            'Energetic',
+            'Beautiful',
+            'Pick Me',
+            'Really Really',
+            'Moon Light Dance',
+            'Step',
+            'Just Kiddin',
+            'Nakakapagpabagabag',
+            'Heart Attack',
+            'Hush',
+            'V3',
+            'Cross Time',
+            'The Festival of Ghost 2 (Sneak)',
+            'Helix',
+            'Hyperion',
+            'Black Dragon',
+            'BSPower Explosion',
+            'Start On Red',
+            'Time Attack <Blue>',
+            'Magical Vacation',
+            'Visual Dream II (In Fiction)',
+            'Death Moon',
+            'Super Stylin',
+            'Christmas Memories',
+            'Keep On!',
+            'Asterios -ReEntry-',
+            'Le Grand Bleu',
+            'Infinity',
+            'Gothique Resonance',
+            'Bedlam',
+            'A Site De La Rue',
+            'Clue',
+            'Redline',
+            'Donatello',
+            'Vulcan',
+            'Shub Sothoth',
+            'Leather',
+            'Me Gustas Tu (Full Song)',
+            'Bang Bang Bang (Full Song)',
+            'Boombayah (Full Song)',
+            'Up & Down (Full Song)',
+            'Acquaintance (Full Song)',
+            'Hush (Full Song)',
+            'Chase Me (Full Song)',
+            'Sarabande (Shortcut)',
+            'Death Moon (Shortcut)',
+            'PRIME 2 Opening',
+            'Shub Niggurath (Shortcut)',
+            'Hyperion (Shortcut)',
+            'Kasou Shinja (Shortcut)'
+          ],
+          'XX (20th Anniversary Edition)': [
+            'Wedding Crashers',
+            'Switronic',
+            'Obliteration',
+            'Transacaglia in G-minor',
+            '1949',
+            'Janus',
+            'I Want U',
+            'District 1',
+            'Nyarlathotep',
+            'Heart Rabbit Coaster',
+            'Lepton Strike',
+            'Skeptic',
+            'Iolite Sky',
+            '%X (Percent X)',
+            'La Cinquantaine',
+            'Le Grand Rouge',
+            'Carmen Bus',
+            'Macaron Day',
+            'Ice of Death',
+            'Poseidon',
+            'Adrenaline Blaster',
+            'Vanish',
+            'Tales of Pumpnia',
+            'Kimchi Fingers',
+            'Orbit Stabilizer',
+            'Destrucimate',
+            'Clematis Rapsodia',
+            'Wicked Legend',
+            'Tantanmen',
+            'Stardream (feat. Romelon)',
+            'Jogging',
+            'The Little Prince (Prod. Godic)',
+            'Full Moon',
+            'Timing',
+            'Fly High',
+            'Black Cat',
+            'Hann (Alone)',
+            'Snapping',
+            'Nekkoya (Pick Me)',
+            'Im So Sick',
+            'Boomerang',
+            'Gashina',
+            'Adios',
+            'HIT',
+            'Bboom Bboom',
+            'Rooftop',
+            'Bungee (Fall in Love)',
+            'Starry Night',
+            'Love Scenario',
+            'Time For The Moon Night',
+            'Bon Bon Chocolat',
+            'Very Nice',
+            'Good Bye',
+            'You And I',
+            'King of Sales',
+            'Gotta Go',
+            'Boong Boong (Feat. Sik-K) (Prod. GroovyRoom)',
+            'Club Night',
+            'Indestructible',
+            '86[nb 6]',
+            'Cross Soul',
+            'Broken Karma (PIU Edit)',
+            'After a Thousand Years',
+            'Lala',
+            'F(R)IEND',
+            'Conflict',
+            'Danger & Danger',
+            'Imagination',
+            'Black Swan',
+            'Obelisque',
+            'Rage of Fire',
+            'Dual Racing <Red vs Blue>',
+            'Cycling!',
+            'Uranium',
+            'Xeroize',
+            'Rising Star',
+            'Cutie Song',
+            'Headless Chicken',
+            'Over The Horizon',
+            'Loki',
+            'Dement ~After Legend~',
+            'Houseplan',
+            'Your Mind',
+            'Nihilism -Another Ver.-',
+            'Phalanx RS2018 edit',
+            'Point Zero 2',
+            'Can-Can ~Orpheus in the Party Mix~',
+            'Papasito (feat. KuTiNA)',
+            'Fires of Destiny',
+            'The End of the World ft. Skizzo',
+            'Forgotten Vampire',
+            'Allegro Con Fuoco (Full Song)',
+            'Desaparecer',
+            'Errorcode: 0',
+            'Meteo5cience (GADGET mix)[nb 8]',
+            'Prime Time',
+            'Fire Noodle Challenge',
+            'Hann (Alone) (Full Song)',
+            'Nekkoya (Pick Me) (Full Song)',
+            'Bboom Bboom (Full Song)',
+            'Im So Sick (Full Song)',
+            'Gashina (Full Song)',
+            'Starry Night (Full Song)',
+            'Time For The Moon Night (Full Song)',
+            'Very Nice (Full Song)',
+            'Good Bye (Full Song)',
+            'Nyarlathotep (Shortcut)',
+            'Wedding Crashers (Shortcut)',
+            'Can-Can ~Orpheus in the Party Mix~ (Shortcut)',
+            'XX Opening',
+            'I Want U (Shortcut)',
+            'Poseidon (Shortcut)',
+            'Switronic (Shortcut)',
+            '86 (Full Song)',
+            'Harmagedon',
+            'Repentance',
+            'The Reverie',
+            'Solfeggietto',
+            'Murdoch',
+            'Little Munchkin',
+            'Simon Says, EURODANCE!! (feat. Sara☆M)',
+            'Barbers Madness',
+            'Yo! Say!! Fairy!!!',
+            'Le Nozze di Figaro ~Celebrazione Remix~'
+          ]
       };
       const channelsSelector = document.querySelector('#channels');
       const choosenSongsSelector = document.querySelector('#choosenSongs');
