added missing songs

--- a/song_randomizer.html
+++ b/song_randomizer.html
@@ -7,6 +7,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css.css">
+   <script src="./original_songs.js"></script>
 </head>
 <body>
   <h1>PIU Songs Randomizer</h1>
@@ -23,409 +24,6 @@
   <ol id="choosenSongs"></ol>
   <script type="text/javascript">
     (_ => {
-      const fullSongs = {
-          '1ST - Perfect': [
-            'Ignition Starts',
-            'Hypnosis',
-            'Funky Tonight',
-            'Another Truth',
-            'Final Audition',
-            'Extravaganza',
-            'Mobius Strip',
-            'Repeatorment Remix',
-            'Final Audition 2',
-            'Naissance',
-            'Turkey March',
-            'Midnight Blue',
-            'Dont Bother Me',
-            'We Are',
-            'Solitary',
-            'Mr. Larpus',
-            'Run to you'
-          ],
-          'EXTRA - Prex3': [
-            'Dr. M',
-            'Emperor',
-            'Love is a Danger Zone',
-            'Maria',
-            'My Way',
-            'Point Break',
-            'Winter',
-            'Will-O-The-Wisp',
-            'Till the end of time',
-            'Oy Oy Oy',
-            'Set me up',
-            'Dance with me',
-            'Vook',
-            'Csikos Post',
-            'Bee',
-            'Beat of The War',
-            'Come to Me',
-            'Starian',
-            'Mistake',
-            'Chicken Wing',
-            'Final Audition Ep. 1',
-            'EXTRA BanYa Remix'
-          ],
-          'EXCEED - ZERO': [
-            'Final Audition 3',
-            'Naissance 2',
-            'Monkey Fingers',
-            'Blazing',
-            'Pump me Amadeus',
-            'X Treme',
-            'Get Up!',
-            'Dignity',
-            'What Do You Really Want?',
-            'HOT',
-            'Deja Vu',
-            'Lions roar',
-            'Ill Give You All My Love',
-            'J Bong',
-            'Hi Bi',
-            'Solitary 2',
-            'Canon D',
-            'Tream Vook of the war REMIX',
-            'Banya Classic Remix',
-            'DIGNITY FULL MIX',
-            'BANYA HIPHOP REMIX',
-            'Canon D FULL Song MIX',
-            'Beat of The War 2',
-            'Moonlight',
-            'Witch Doctor',
-            'Love is a Danger Zone pt. 2',
-            'Phantom',
-            'Papa Gonzales',
-            'Chung Hwa Ban Jeom',
-            'Love is a danger zone (try to B.P.M.)',
-            'Love is a Danger Zone pt.2 another'
-          ],
-          'NX - NXA': [
-            'Witch Doctor #1',
-            'Arch of Darkness',
-            'Chimera',
-            'Do U Know That-Old School',
-            'Gun Rock',
-            'Bullfighters Song',
-            'Ugly Dee',
-            'Final Audition Ep. 2-1',
-            'Final Audition Ep. 2-2',
-            'Groove Party',
-            'WI-EX-DOC-VA',
-            'BEMERA',
-            'Love is a Danger Zone 2 Full Song',
-            'Beat of The War 2 Full Song',
-            'Solitary 1.5',
-            'Beat The Ghost',
-            'Caprice of Otada',
-            'Monkey Fingers 2',
-            'Faster Z',
-            'Pumptris Quattro',
-            'Beat # No.4',
-            'Higgledy Piggledy',
-            'Dance All Night',
-            'Dance Vibrations',
-            'Energizer',
-            'Banya-P Guitar Remix',
-            'Blaze Emotion',
-            'Cannon X.1',
-            'Chopsticks Challenge',
-            'Panuelito Rojo',
-            'Procedimientos Para Llegar A Un Com?n Acuerdo',
-            'Digan Lo Que Digan'
-          ],
-          'FIESTA': [
-            'XTREE',
-            'Sorceress Eliese',
-            'U Got 2 Know',
-            'Destination',
-            'Vacuum',
-            'NARCISISTA POR EXCELENCIA',
-            'Xenesis',
-            'Arirang',
-            'Tek -Club Copenhagen-',
-            'Hello William',
-            'Turkey March -Minimal Tunes-',
-            'Get Up (and go)',
-            'Phantom -Intermezzo-',
-            'B.P Classic Remix',
-            'PaPa helloizing',
-            'B.P Classic Remix 2',
-            'Hard Core Rock Mix',
-            'Set Up Me2 Mix',
-            'msgoon RMX pt.6',
-            'Deja Vu',
-            'NARCISISTA POR EXCELENCIA',
-            'Dawn of The Apocalypse',
-            'Final Audition 2',
-            'Final Audition 3',
-            'Final Audition EP. 2-X',
-            'Love is a Danger Zone',
-            'Love is a Danger Zone pt. 2',
-            'Extravaganza',
-            'CHICKEN WING',
-            'Winter',
-            'Solitary 2',
-            'Moonlight'
-          ],
-          'FIESTA EX': [
-            'Cleaner',
-            'Interference',
-            'Reality',
-            'Take Out',
-            'Butterfly',
-            'Overblow',
-            'We Got 2 Know',
-            'Superman',
-            'No.3',
-            'Like A Man',
-            'Crashday',
-            'What Happened',
-            'Gargoyle',
-            'Allegro Con Fuoco',
-            'Hungarian Dance V',
-            'The Devil',
-            'X-Rave',
-            'Native',
-            'Smells Like A Chocolate',
-            'Necromancy',
-            'Vacuum Cleaner',
-            'Everybody Got 2 Know',
-            'Interference',
-            'Like A Man',
-            'No.3',
-            'Crashday',
-            'Trotpris',
-            'Cleaner',
-            'Take Out',
-            'Overblow',
-            'X-Rave',
-            'Pavane'
-          ],
-          'FIESTA 2': ['Monolith','Y2Z','Rockhill','Switchback','Ladybug','Hardkore of the North','Rippin It Up','Tribe Attacker','Virtual Emotion','Take Me Back','RE-RAVE','Heel and Toe','Dream To Nightmare','Rainspark','Utopia','Xuxa','Be Alive (Raaban Inc. Mix)','VVV','Star Command','Pop The Track','Electric','Passacaglia','Baroque Virus','Elise','Ignis Fatuus(DM Ashura Mix)','Love Is A Danger Zone (Cranky Mix)','Hypnosis(SynthWulf Mix)','FFF','Unique','Accident','D','U Got Me Rocking'],
-          'PRIME': ['Nemesis','Katkoi','Latino Virus','Elysium','Yog-Sothoth','Silhouette_Effect','Chinese restaurant','Avalanche','Force of Ra','Requiem','You Got Me Crazy','B2','Meteorize','Mad5cience','Hestia','Amphitryon','Leakage Voltage','Removable Disk0','Super Fantasy','Violet Perfume','Red Swan','Hyacinth','Blaze emotion(Band version)','1950','Sugar Conspiracy Theory','Allegro Piu Mosso','Annihilator Method','Move That Body!','Rock the house','Scorpion King','Point Zero One','red snow'],
-          'PRIME 2': [
-            'Last Rebirth',
-            'Super Capriccio',
-            'Hellfire',
-            'Tritium',
-            'Cross Over',
-            'God Mode feat. Skizzo',
-            'Shub Niggurath',
-            'Further',
-            'The Quick Brown Fox Jumps Over The Lazy Dog',
-            'Silver Beat feat. Chisa Uezono',
-            'Bring Back the Beat',
-            'Break Out',
-            'Sarabande',
-            'Kasou Shinja',
-            'Overblow 2',
-            'Passing Rider',
-            'Arcana Force',
-            'Allegro Furioso',
-            'Anguished Unmaking',
-            'Utsushiyo no Kaze feat. Kana',
-            'Hey U',
-            'Twist of Fate (feat. Ruriling)',
-            'HTTP',
-            'Up & Up (Produced by AWAL)',
-            'Travel to Future',
-            'Rave til the Earths End',
-            'Awakening',
-            'Escape',
-            'Waltz of Doge',
-            'Bang Bang Bang',
-            'Me Gustas Tu',
-            'Rhythm Ta',
-            'Chase Me',
-            'Pick Me',
-            'Jackpot',
-            'Gotta Be You',
-            'Boombayah',
-            'Sober',
-            'Up & Down',
-            'Good Night',
-            'Youre the Best',
-            'Number Nine',
-            'Acquaintance',
-            'Energetic',
-            'Beautiful',
-            'Pick Me',
-            'Really Really',
-            'Moon Light Dance',
-            'Step',
-            'Just Kiddin',
-            'Nakakapagpabagabag',
-            'Heart Attack',
-            'Hush',
-            'V3',
-            'Cross Time',
-            'The Festival of Ghost 2 (Sneak)',
-            'Helix',
-            'Hyperion',
-            'Black Dragon',
-            'BSPower Explosion',
-            'Start On Red',
-            'Time Attack <Blue>',
-            'Magical Vacation',
-            'Visual Dream II (In Fiction)',
-            'Death Moon',
-            'Super Stylin',
-            'Christmas Memories',
-            'Keep On!',
-            'Asterios -ReEntry-',
-            'Le Grand Bleu',
-            'Infinity',
-            'Gothique Resonance',
-            'Bedlam',
-            'A Site De La Rue',
-            'Clue',
-            'Redline',
-            'Donatello',
-            'Vulcan',
-            'Shub Sothoth',
-            'Leather',
-            'Me Gustas Tu (Full Song)',
-            'Bang Bang Bang (Full Song)',
-            'Boombayah (Full Song)',
-            'Up & Down (Full Song)',
-            'Acquaintance (Full Song)',
-            'Hush (Full Song)',
-            'Chase Me (Full Song)',
-            'Sarabande (Shortcut)',
-            'Death Moon (Shortcut)',
-            'PRIME 2 Opening',
-            'Shub Niggurath (Shortcut)',
-            'Hyperion (Shortcut)',
-            'Kasou Shinja (Shortcut)'
-          ],
-          'XX (20th Anniversary Edition)': [
-            'Wedding Crashers',
-            'Switronic',
-            'Obliteration',
-            'Transacaglia in G-minor',
-            '1949',
-            'Janus',
-            'I Want U',
-            'District 1',
-            'Nyarlathotep',
-            'Heart Rabbit Coaster',
-            'Lepton Strike',
-            'Skeptic',
-            'Iolite Sky',
-            '%X (Percent X)',
-            'La Cinquantaine',
-            'Le Grand Rouge',
-            'Carmen Bus',
-            'Macaron Day',
-            'Ice of Death',
-            'Poseidon',
-            'Adrenaline Blaster',
-            'Vanish',
-            'Tales of Pumpnia',
-            'Kimchi Fingers',
-            'Orbit Stabilizer',
-            'Destrucimate',
-            'Clematis Rapsodia',
-            'Wicked Legend',
-            'Tantanmen',
-            'Stardream (feat. Romelon)',
-            'Jogging',
-            'The Little Prince (Prod. Godic)',
-            'Full Moon',
-            'Timing',
-            'Fly High',
-            'Black Cat',
-            'Hann (Alone)',
-            'Snapping',
-            'Nekkoya (Pick Me)',
-            'Im So Sick',
-            'Boomerang',
-            'Gashina',
-            'Adios',
-            'HIT',
-            'Bboom Bboom',
-            'Rooftop',
-            'Bungee (Fall in Love)',
-            'Starry Night',
-            'Love Scenario',
-            'Time For The Moon Night',
-            'Bon Bon Chocolat',
-            'Very Nice',
-            'Good Bye',
-            'You And I',
-            'King of Sales',
-            'Gotta Go',
-            'Boong Boong (Feat. Sik-K) (Prod. GroovyRoom)',
-            'Club Night',
-            'Indestructible',
-            '86[nb 6]',
-            'Cross Soul',
-            'Broken Karma (PIU Edit)',
-            'After a Thousand Years',
-            'Lala',
-            'F(R)IEND',
-            'Conflict',
-            'Danger & Danger',
-            'Imagination',
-            'Black Swan',
-            'Obelisque',
-            'Rage of Fire',
-            'Dual Racing <Red vs Blue>',
-            'Cycling!',
-            'Uranium',
-            'Xeroize',
-            'Rising Star',
-            'Cutie Song',
-            'Headless Chicken',
-            'Over The Horizon',
-            'Loki',
-            'Dement ~After Legend~',
-            'Houseplan',
-            'Your Mind',
-            'Nihilism -Another Ver.-',
-            'Phalanx RS2018 edit',
-            'Point Zero 2',
-            'Can-Can ~Orpheus in the Party Mix~',
-            'Papasito (feat. KuTiNA)',
-            'Fires of Destiny',
-            'The End of the World ft. Skizzo',
-            'Forgotten Vampire',
-            'Allegro Con Fuoco (Full Song)',
-            'Desaparecer',
-            'Errorcode: 0',
-            'Meteo5cience (GADGET mix)[nb 8]',
-            'Prime Time',
-            'Fire Noodle Challenge',
-            'Hann (Alone) (Full Song)',
-            'Nekkoya (Pick Me) (Full Song)',
-            'Bboom Bboom (Full Song)',
-            'Im So Sick (Full Song)',
-            'Gashina (Full Song)',
-            'Starry Night (Full Song)',
-            'Time For The Moon Night (Full Song)',
-            'Very Nice (Full Song)',
-            'Good Bye (Full Song)',
-            'Nyarlathotep (Shortcut)',
-            'Wedding Crashers (Shortcut)',
-            'Can-Can ~Orpheus in the Party Mix~ (Shortcut)',
-            'XX Opening',
-            'I Want U (Shortcut)',
-            'Poseidon (Shortcut)',
-            'Switronic (Shortcut)',
-            '86 (Full Song)',
-            'Harmagedon',
-            'Repentance',
-            'The Reverie',
-            'Solfeggietto',
-            'Murdoch',
-            'Little Munchkin',
-            'Simon Says, EURODANCE!! (feat. Sara☆M)',
-            'Barbers Madness',
-            'Yo! Say!! Fairy!!!',
-            'Le Nozze di Figaro ~Celebrazione Remix~'
-          ]
-      };
       const channelsSelector = document.querySelector('#channels');
       const choosenSongsSelector = document.querySelector('#choosenSongs');
       const startButton = document.querySelector('#start');
